--- a/src/app/application-onboarding/application/application.component.less
+++ b/src/app/application-onboarding/application/application.component.less
@@ -27,6 +27,16 @@
 	left: -14px;
 	top: -1px;
 }
+.tree-inset li.ti-subtitle > i{
+	font-size: 20px;
+	left: -11px;
+	top: 5px;
+}
+.tree-inset li.ti-subitemtitle > i{
+	font-size: 17px;
+	left: -10px;
+	top: 5px;
+}
 .tree-inset li.ti-title + .ti-item{
 	margin-top: 18px;
 }
@@ -140,5 +150,35 @@ input.ng-invalid.ng-touched{
 }
 .formarray_btn{
 	font-size: x-large;
-	color: #6c757d
+	color: #6c757d;
+	cursor: pointer;
+}
+.group_permission{
+	a{
+		color: #007bff;
+		text-decoration: none;
+		cursor: pointer;
+	}
+	.permission_section_heading{
+		padding: 0rem 21px;
+		margin-bottom: 0px !important;
+	}
+	.permission_Section_content{
+		padding: 0rem 21px;
+	}
+}
+.service_section{
+	.pl-5{
+		padding-left: 3rem !important;
+	}
+	.pl-6{
+		padding-left: 4.5rem !important;
+	}
+	.mr-5{
+		margin-right: 3.1rem !important;
+	}
+	.mr-6{
+		margin-right: 4.4rem !important;
+	}
+	
 }
