feature/layout: Changes related to look and feel i.e,getting in new UX design

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,15 +1,15 @@
 <!-- header of application -->
 <div class="main-topBar d-flex" *ngIf="isAuthenticate">
-    <div class="mtb_left">
-      <div class="input-group input-group-search">
-        <input type="text" class="form-control" placeholder="Type to search...">
-        <div class="input-group-append">
-          <button class="btn" type="button"><i class="fa fa-search"></i></button>
-        </div>
+  <div class="mtb_left ml-auto">
+    <div class="input-group input-group-search">
+      <input type="text" class="form-control" placeholder="Type to search...">
+      <div class="input-group-append">
+        <button class="btn" type="button"><i class="fa fa-search"></i></button>
       </div>
     </div>
+  </div>
     <!-- /.mtb_left -->
-    <div class="mtb_right ml-auto">
+    <div class="mtb_right ml-4">
       <div class="dropdown userSetting">
         <button class="btn p-0 dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <span class="userPic"><img src="../assets/user_pic.png" alt="User Pic" /></span>
