Audit table and count info dynamic integration

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -179,7 +179,6 @@ a, .btn, button, .content_section, .data_list{
 .maindiv{
     padding: 0px;
 }
-//Added by meera
 .p-3 > .tab-pane{
 	border-radius: 3px;
 }
@@ -265,4 +264,26 @@ a, .btn, button, .content_section, .data_list{
 .mainrow{
     margin: 0px;
 }
-
+.card .table td, .card .table th{
+	padding-top: 8px;
+	padding-bottom: 8px;
+	font-size: 13.5px;
+}
+.table th{
+	color: #6a6969;
+	font-weight: 300;
+	padding-top: 8px;
+	background: #f5f6f7;
+	padding-bottom: 8px;
+}
+.form-group {
+    margin-bottom: 0.6rem;
+}
+.select{
+	background: #fff url(../assets/select_arrow.png) no-repeat center right 5px;
+	padding-right: 17px !important;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+	color: #999 !important;
+}
