--- a/src/app/audit/audit.component.less
+++ b/src/app/audit/audit.component.less
@@ -59,9 +59,26 @@
 	border-bottom: 1px #e7e7e7 solid;
 	padding: 1rem 1rem 0.6rem;
 }
-.container{
-	min-width: max-content;
-}
 li{
 	cursor: pointer;
+}
+.card .table td, .card .table th{
+	padding-top: 8px;
+	padding-bottom: 8px;
+	font-size: 13.5px;
+}
+.table th{
+	color: #6a6969;
+	font-weight: 300;
+	padding-top: 8px;
+	background: #f5f6f7;
+	padding-bottom: 8px;
+}
+.select{
+	background: #fff url(../../assets/select_arrow.png) no-repeat center right 5px;
+	padding-right: 17px !important;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+	color: #999 !important;
 }
