--- a/src/app/application-dashboard/application-dashboard.component.less
+++ b/src/app/application-dashboard/application-dashboard.component.less
@@ -269,4 +269,75 @@
 .not-attempt-text {
 	color: #999;
 }
+.btn {
+	font-family: 'Open Sans', sans-serif;
+	font-size: 14px;
+	color: #304151;
+}
+.btn-white {
+	background: #fff;
+	color: #304151;
+}
+.btn-primary {
+	color: #fff;
+	background: #009bfa;
+	border-color: #009bfa;
+	&:hover {
+		background: #2480b9;
+		border-color: #2480b9;
+	}
+}
+.badge-primary {
+	color: #fff;
+	background: #009bfa;
+	border-color: #009bfa;
+}
+.sw-btn-next {
+	color: #fff;
+	background: #009bfa;
+	border-color: #009bfa;
+	&:hover {
+		background: #2480b9;
+		border-color: #2480b9;
+	}
+}
+.btn-default {
+	padding: 6px 15px;
+	color: #304151 !important;
+	background: #fff !important;
+	border: 1px #e4ebf1 solid;
+	&:hover {
+		background: #dadada !important;
+	}
+	.userPic {
+		display: inline-block;
+		margin-bottom: 2px;
+	}
+}
+.sw-btn-prev {
+	padding: 6px 15px;
+	color: #304151 !important;
+	background: #fff !important;
+	border: 1px #e4ebf1 solid;
+	&:hover {
+		background: #dadada !important;
+	}
+}
+.btn-link-black.btn-link {
+	text-decoration: underline !important;
+	color: #000 !important;
+}
+.btn-sm {
+	padding: 3px 10px;
+}
 
+.dropdown-item{
+	padding: 0.15rem 0.9rem;
+}
+.dropdown-menu{
+	font-size: 14px;
+	min-width: 100%;
+}
+.showElementHover {
+	cursor: pointer !important;
+}
